# Whisper

./: extended_medical_dataset.json  main.py  medical_dataset.json  pyproject.toml  replit.nix
